syntax = "proto3";

package movidesk;

service MovideskService {
  rpc GetTicket (GetTicketRequest) returns (GetTicketResponse);
<<<<<<< HEAD
  rpc GetAllTickets (GetAllTicketsRequest) returns (GetAllTicketsResponse);
}

message GetAllTicketsRequest {
  string search = 1;
  string return = 2;
}

message GetAllTicketsResponse {
  string data = 1;
=======
  rpc UpdateTicket (UpdateTicketRequest) returns (UpdateTicketResponse);
>>>>>>> e37b3a6dc90dce3fd2faae04e8879e22750bb958
}

message GetTicketRequest {
  string id = 1;
}

message GetTicketResponse {
  string data = 1;
}

message UpdateTicketRequest {
  string id = 1;
}

message UpdateTicketResponse {
  string data = 1;
}